[gd_scene load_steps=6 format=3 uid="uid://dbmhplp84j0lh"]

[ext_resource type="Script" path="res://menu_game.gd" id="1_jfw0e"]
[ext_resource type="Theme" uid="uid://dobuvjuude3ey" path="res://menu_game2.tres" id="2_g0qqo"]
[ext_resource type="Theme" uid="uid://d3s348cyinxis" path="res://menu_game3.tres" id="3_ikcfk"]
[ext_resource type="Theme" uid="uid://duh15vwxyrd11" path="res://menu_game.tres" id="4_wpl70"]

[sub_resource type="Theme" id="Theme_b7j2f"]
default_base_scale = 2.0

[node name="menu_game" type="Node"]

[node name="menu_game" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("1_jfw0e")

[node name="ColorRect" type="ColorRect" parent="menu_game"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -196.0
offset_top = 199.0
offset_right = 249.0
offset_bottom = -214.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_b7j2f")
color = Color(1, 1, 1, 0.0588235)

[node name="VBoxContainer" type="VBoxContainer" parent="menu_game"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -475.0
offset_top = 339.0
offset_right = 481.0
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2

[node name="quit" type="Button" parent="menu_game/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_g0qqo")
button_mask = 5
text = "Start the game"

[node name="reiniciar" type="Button" parent="menu_game/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_ikcfk")
button_mask = 5
text = "Quit game"

[node name="sair" type="Button" parent="menu_game/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme = ExtResource("4_wpl70")
button_mask = 5
text = "Restart game"

[connection signal="pressed" from="menu_game/VBoxContainer/quit" to="menu_game" method="_on_quit_pressed"]
[connection signal="pressed" from="menu_game/VBoxContainer/reiniciar" to="menu_game" method="_on_reiniciar_pressed"]
[connection signal="pressed" from="menu_game/VBoxContainer/sair" to="menu_game" method="_on_sair_pressed"]
